Actualizado el punto 3 de la documentación

--- a/docs/03_system_scope_and_context.adoc
+++ b/docs/03_system_scope_and_context.adoc
@@ -1,66 +1,105 @@
 [[section-system-scope-and-context]]
-== System Scope and Context
+== Alcance y Contexto del Sistema
 
 
 [role="arc42help"]
 ****
-.Contents
+.Contenido
+El alcance y contexto del sistema - como lo sugiere el nombre - delimita al sistema (es decir, el alcance) de todos sus
+socios de comunicación (Usuarios y sistemas vecinos, es decir, el contexto del sistema). 
 System scope and context - as the name suggests - delimits your system (i.e. your scope) from all its communication partners
-(neighboring systems and users, i.e. the context of your system). It thereby specifies the external interfaces.
+(neighboring systems and users, i.e. the context of your system). Con ello se especifican las interfaces externas.
 
-If necessary, differentiate the business context (domain specific inputs and outputs) from the technical context (channels, protocols, hardware).
+Si es necesario, diferenciar el contexto de negocio (Entradas y salidas específicas del dominio) del contexto técnico
+(canales, protocolos, hardware).
 
-.Motivation
-The domain interfaces and technical interfaces to communication partners are among your system's most critical aspects. Make sure that you completely understand them.
+.Motivación
+Las interfases de dominio y las interfases técnicas a los socios de comunicación son de los aspectos más críticos del sistema.
+Se debe asegurar el entendimiento de ellos.
 
-.Form
-Various options:
+.Forma
+Varias opciones:
 
-* Context diagrams
-* Lists of communication partners and their interfaces.
+* Diagramas de contexto
+* Listas de socios de comunicación y sus interfases.
 ****
 
 
-=== Business Context
+=== Contexto de Negocio
 
 [role="arc42help"]
 ****
-.Contents
-Specification of *all* communication partners (users, IT-systems, ...) with explanations of domain specific inputs and outputs or interfaces.
-Optionally you can add domain specific formats or communication protocols.
+.Contenido
+La especificación de *todos* los socios de comunicación (usuarios, sistemas, ...) con explicaciones de las entradas y salidas
+específicas del dominio o interfases.
+Opcionalmente puede agregar formatos específicos de dominio o protocolos de comunicación
 
-.Motivation
-All stakeholders should understand which data are exchanged with the environment of the system.
+.Motivación
+Todas las partes interesadas deben entender que datos son intercambiados con el ambiente del sistema.
 
-.Form
-All kinds of diagrams that show the system as a black box and specify the domain interfaces to communication partners.
+.Forma
+Cualquier forma de diagramas que muestren al sistema como una caja negra y especifiquen las interfases de dominio a los
+socios de comunicación.
 
-Alternatively (or additionally) you can use a table.
-The title of the table is the name of your system, the three columns contain the name of the communication partner, the inputs, and the outputs.
+De manera alternativa (o adicional) se puede utilizar una tabla.
+El título de la tabla es el nombre del sistema, las tres columnas contienen el nombre del socio de comunicación, las
+entradas y las salidas
 ****
 
-**<Diagram or Table>**
+[plantuml,"Business Context Diagram",png]
+----
+skinparam actorStyle awesome
+actor Usuario as g
+package DeDe {
+    usecase "Encargar productos" as UC1
+    usecase "Login" as UC2
+    usecase "Ver pedidos" as UC3
+}
+package Pod {
+    usecase "Gestión de usuarios" as UC4
+}
+package BBDD {
+    usecase "Gestión de productos" as UC5
+}
+g --> UC1
+g --> UC2
+g --> UC3
+DeDe --> Pod
+DeDe --> BBDD
+----
 
-**<optionally: Explanation of external domain interfaces>**
+El sistema permitirá al usuario hacer pedidos de los diferentes productos disponibles, pudiendo también, iniciar sesión con su propia cuenta mediante un proveedor de pods, que seguirá los principios SOLID. Dicho pod es quien se encarga de gestionar la información de los usuarios. Por otro lado, los datos de los productos serán almacenados por la base de datos.
 
-=== Technical Context
+* Usuario: persona interesado en la tienda que quiera realizar una compra y poder gestionar su propia cuenta
+* DeDe: provee al usuario la interfz necesaria para llevar a cabo todas las operaciones
+* Pod: suministra a la aplicación la información descentralizada del usuario
+* Base de datos: encargada de toda la persistencia de los datos que compondran la aplicación
+
+=== Contexto Técnico
 
 [role="arc42help"]
 ****
-.Contents
-Technical interfaces (channels and transmission media) linking your system to its environment. In addition a mapping of domain specific input/output to the channels, i.e. an explanation with I/O uses which channel.
+.Contenido
+Las interfases técnicas (medios de transmisión y canales) enlanzando al sistema con su ambiente. De manera adicional
+el mapeo de las entradas/salidas específicas del dominio a los canales, es decir, una explicación acerca de que entrada/salida
+utiliza cual canal.
 
-.Motivation
-Many stakeholders make architectural decision based on the technical interfaces between the system and its context. Especially infrastructure or hardware designers decide these technical interfaces.
+.Motivación
+Muchas partes relacionadas realizan decisiones arquitectónicas basadas en las interfases técnicas entre el sistema y 
+su contexto. Especialmente los diseñadores de infraestructura o hardware deciden estas interfases técnicas.
 
-.Form
-E.g. UML deployment diagram describing channels to neighboring systems,
-together with a mapping table showing the relationships between channels and input/output.
-
+.Forma
+Por ejemplo, diagramas UML de despligue describiendo los canales a sistemas vecinos, junto con una tabla de 
+mapeo mostrando las relaciones entre los canales y las entradas/salidas.
 ****
 
-**<Diagram or Table>**
+Como se ha mencionado anteriormente, la aplicación hará uso de la tecnología SOLID dirigida por Tim Berners-Lee para realizar un proyecto descentralizado. Esta proporcionará un pod a cada usuario permitiendo almacenar toda la información de cada uno, y se la proveerá a la aplicación.
+Para la implementación del proyecto se utilizarán tecnologías como REACT, para el desarrollo Frontend, y la base de datos MongoDB, para todo lo relativo a la persistencia de datos.
 
-**<optionally: Explanation of technical interfaces>**
-
-**<Mapping Input/Output to Channels>**
+|===
+|Tecnología|Descripción
+| React | Biblioteca escrita en JavaScript desarrollada por Facebook para la creación de interfaces de usuario.
+| TypeScript | Lenguaje de programación libre y de código abierto desarrollado y mantenido por Microsoft. Es un superconjunto de JavaScript
+| SOLID | Proyecto descentralizado cuyo principal objetivo es que el usuario tenga el control de su privacidad.
+| MongoDB | Base de datos NoSQL open source que ofrece un modelo de datos flexible para organizar y almacenar todo tipo de datos
+|===
