--- a/docs/11_technical_risks.adoc
+++ b/docs/11_technical_risks.adoc
@@ -1,17 +1,22 @@
 [[section-technical-risks]]
-== Risks and Technical Debts
-
+== Riesgos y deuda técnica
+* Desconocimiento de la tecnología a usar en el desarrollo del proyecto.
+* La posibilidad de que un miembro abandonce el grupo.
+* Posible mala implementacion de la estructura de del proyecto y tener que refactorizar la mayor parte de esta.
+* Posibles fallos incontrolados o situaciones no conocidas en la aplicación.
 
 [role="arc42help"]
 ****
-.Contents
-A list of identified technical risks or technical debts, ordered by priority
+.Contenido
+Una lista de los riesgos técnicos o deuda técnica identificada, ordenada por prioridad.
 
-.Motivation
-“Risk management is project management for grown-ups” (Tim Lister, Atlantic Systems Guild.) 
+.Motivación
+"El manejo de riesgos es administración de proyectos para gente adulta" (Tim Lister, Atlantic Systems Guild.)
 
-This should be your motto for systematic detection and evaluation of risks and technical debts in the architecture, which will be needed by management stakeholders (e.g. project managers, product owners) as part of the overall risk analysis and measurement planning.
+Esto debiera ser el lema para la detección sistemática y la evaluación de riesgos y deuda técnica en la arquitectura,
+que será requerida por las partes relacionadas administrativas (por ejemplo, administradores de proyectoes, propietarios
+de producto) como parte de la planeación y medición de riesgos en general.
 
-.Form
-List of risks and/or technical debts, probably including suggested measures to minimize, mitigate or avoid risks or reduce technical debts.
+.Forma
+Lista de riesgos y/o deuda técnica, que podría incluir una medidas sugeridas para minimizar, mitigar o evitar riesgos o reducir la deuda técnica.
 ****
