--- a/docs/01_introduction_and_goals.adoc
+++ b/docs/01_introduction_and_goals.adoc
@@ -1,75 +1,61 @@
 [[section-introduction-and-goals]]
-== Introduction and Goals
+== Introducción y Metas
+
+=== Vista de Requerimientos
 
 [role="arc42help"]
 ****
-Describes the relevant requirements and the driving forces that software architects and development team must consider. These include
+Algunos de los requisitos se extrajeron del propio enunciado de la práctica:
+https://arquisoft.github.io/course2122/labEnunciadoPractica.html
+El sistema simulará una tienda de comida online, donde los clientes podrán realizar varias acciones: registros, log in, compras… y los administradores podrán modificar y eliminar productos existentes y añadir nuevos si lo necesitan. La seguridad de los clientes debe estar garantizada en todo momento, siguiendo para ello los principios SOLID.
+Los requisitos son, a grandes rasgos, los siguientes:
+* El sistema debe poder registrar nuevos usuarios y poder iniciar sesión para los ya existentes.
+* La interfaz de usuario deberá ser acogedora de cara a los clientes, para que ellos se sientan más cómodos a la hora de usar la aplicación.
+* El sistema debe poder ir calculando el coste total de los productos elegidos por el cliente.
+* El sistema tiene que poder procesar compras de los usuarios una vez estén registrados.
+* El sistema debe poder mostrar a un cliente registrado un historial con los pedidos que haya realizado.
+*	El sistema debe, una vez terminado el pedido y antes de procesarlo, calcular el sobrecoste que puede tener el envío del producto dependiendo de donde se encuentre el domicilio del usuario.
+*	El sistema debe mostrar los productos que hay disponibles y, como mínimo, separar productos de comida de los de bebida.
+*	Se deben poder añadir nuevos productos.
+*	Solo los administradores del bar podrán crear o eliminar (entre más operaciones) los productos, mientras que los clientes podrán interactuar con la aplicación para comprar los productos.
 
-* underlying business goals, essential features and functional requirements for the system
-* quality goals for the architecture
-* relevant stakeholders and their expectations
 ****
 
-=== Requirements Overview
+=== Metas de Calidad
 
 [role="arc42help"]
 ****
-.Contents
-Short description of the functional requirements, driving forces, extract (or abstract)
-of requirements. Link to (hopefully existing) requirements documents
-(with version number and information where to find it).
-
-.Motivation
-From the point of view of the end users a system is created or modified to
-improve support of a business activity and/or improve the quality.
-
-.Form
-Short textual description, probably in tabular use-case format.
-If requirements documents exist this overview should refer to these documents.
-
-Keep these excerpts as short as possible. Balance readability of this document with potential redundancy w.r.t to requirements documents.
-****
-
-=== Quality Goals
-
-[role="arc42help"]
-****
-.Contents
-The top three (max five) quality goals for the architecture whose fulfillment is of highest importance to the major stakeholders. We really mean quality goals for the architecture. Don't confuse them with project goals. They are not necessarily identical.
-
-.Motivation
-You should know the quality goals of your most important stakeholders, since they will influence fundamental architectural decisions. Make sure to be very concrete about these qualities, avoid buzzwords.
-If you as an architect do not know how the quality of your work will be judged …
-
-.Form
-A table with quality goals and concrete scenarios, ordered by priorities
-****
-
-=== Stakeholders
-
-[role="arc42help"]
-****
-.Contents
-Explicit overview of stakeholders of the system, i.e. all person, roles or organizations that
-
-* should know the architecture
-* have to be convinced of the architecture
-* have to work with the architecture or with code
-* need the documentation of the architecture for their work
-* have to come up with decisions about the system or its development
-
-.Motivation
-You should know all parties involved in development of the system or affected by the system.
-Otherwise, you may get nasty surprises later in the development process.
-These stakeholders determine the extent and the level of detail of your work and its results.
-
-.Form
-Table with role names, person names, and their expectations with respect to the architecture and its documentation.
-****
+Contenido, Motivación
+*	Sencillez, tanto para el cliente como para el administrador debe ser sencillo utilizar la aplicación y desenvolverse con ella.
+*	Testeable, el sistema debe poder probarse fácilmente en todas sus capas.
+*	Eficiente, los procedimientos de inicio de sesión, registro, compra, añadir o eliminar productos… deben poder realizarse en un periodo de tiempo razonable.
+*	Usabilidad, las opciones dentro de la aplicación deben ser sencillas de aprender y de utilizar.
+*	Seguridad, los datos deben ser seguros y consistentes en todo momento.
 
 [options="header",cols="1,2,2"]
 |===
-|Role/Name|Contact|Expectations
-| _<Role-1>_ | _<Contact-1>_ | _<Expectation-1>_
-| _<Role-2>_ | _<Contact-2>_ | _<Expectation-2>_
+|Ref|Meta de Calidad|Escenario|Prioridad(Cliente/Arquitecto)
+|1.|Seguridad|La aplicación deberá ser segura para todos los datos de los clientes, tomando para ello las medidas pertinentes.|Alto / Alto
+|2.|Usabilidad|Muy importante, la aplicación tendrá una serie de opciones (registro, añadir nuevos productos, compras…) las cuales deben ser sencillas de utilizar para todos.|Alto / Alto
+|3.|Consistencia|Los datos de los productos y de los clientes deben estar siempre actualizados y ser correctos.| Medio / Alto
+|4.|Eficiencia|Los usuarios no querrán estar esperando mucho tiempo para poder realizar sus compras, inicios de sesión… y lo propio con el administrador. Por ello es importante que la aplicación no tarde demasiado en realizar dichas operaciones.| Alto / Medio
+|5.|Testeable|Es importante poder probar todas las capas de la aplicación para poder corregir los errores de una manera rápida y eficaz.| Bajo / Alto
+|6.|Atractivo|La interfaz debería ser atractiva de cara a los usuarios, ya que, por norma general, se sentirán más acogidos y cómodos en una aplicación que les resulte atractivo que en uno que no lo sea.| Medio / Medio
 |===
+
+****
+
+=== Partes interesadas (Stakeholders)
+
+[role="arc42help"]
+****
+[options="header",cols="1,2,2"]
+|===
+|Rol|Expectativas
+|Arquitectos del Software|Poder aplicar correctamente las diferentes herramientas que se nos proporcionan para crear una aplicación que contente a las demás partes interesadas. Es necesario que conozcan la arquitectura y sepan trabajar en ella.
+|Desarrolladores|Tener una documentación bien desarrollada y entender la arquitectura de manera correcta para poder aplicarla correctamente en la práctica.
+|Profesores|Sentirse orgullosos de que sabemos aplicar todo lo proporcionado en las clases de practicas y teoría y crear con ello una buena arquitectura.
+|Usuarios|Poder entender y utilizar la aplicación correctamente de una manera sencilla y eficaz.
+|Administradores|Estar al tanto del bar y poder actualizarlo en caso de tener nuevos productos o algunos estén obsoletos.
+|===
+****
