--- a/docs/12_glossary.adoc
+++ b/docs/12_glossary.adoc
@@ -4,28 +4,26 @@
 
 
 [role="arc42help"]
-****
-.Contents
-The most important domain and technical terms that your stakeholders use when discussing the system.
 
-You can also see the glossary as source for translations if you work in multi-language teams.
-
-.Motivation
-You should clearly define your terms, so that all stakeholders
-
-* have an identical understanding of these terms
-* do not use synonyms and homonyms
-
-.Form
-A table with columns <Term> and <Definition>.
-
-Potentially more columns in case you need translations.
-
-****
-
-[options="header"]
+[cols="e,2e" options="header"]
 |===
-| Term         | Definition
-| <Term-1>     | <definition-1>
-| <Term-2>     | <definition-2>
+|Término |Definición
+
+|Stack
+|Lista de todos los servicios tecnológicos utilizados para construir y ejecutar una sola aplicación
+
+|NoSQl
+|Base de datos no relacional (No tiene estructura fija)
+
+|Framework
+|Esquema o marco de trabajo que ofrece una estructura base para elaborar un proyecto con objetivos específicos
+
+|Accesibilidad 
+|Práctica inclusiva de garantizar la accesibilidad a los sitios web, y que las herramientas y las tecnologías estén diseñados y desarrollados para que las personas con discapacidad puedan usarlas
+
+|Pull Request
+|Petición que el propietario de una rama de un repositorio hace al propietario del repositorio original para que este último incorpore los commits que están en la rama
+
+|Pods
+|Son las estructuras que utiliza Solid para almacenar datos
 |===
