--- a/docs/10_quality_scenarios.adoc
+++ b/docs/10_quality_scenarios.adoc
@@ -1,63 +1,26 @@
 [[section-quality-scenarios]]
-== Quality Requirements
+== Requerimientos de Calidad
 
+=== Árbol de Calidad
 
-[role="arc42help"]
-****
+[plantuml,"qualityTree2",png]
+----
+(Atributos de calidad) --> (Eficiencia)
+(Atributos de calidad) --> (Usabilidad)
+(Atributos de calidad) --> (Privacidad)
+(Atributos de calidad) --> (Seguridad)
+(Atributos de calidad) --> (Accesibilidad)
+----
 
-.Content
-This section contains all quality requirements as quality tree with scenarios. The most important ones have already been described in section 1.2. (quality goals)
+=== Escenarios de calidad
 
-Here you can also capture quality requirements with lesser priority,
-which will not create high risks when they are not fully achieved.
-
-.Motivation
-Since quality requirements will have a lot of influence on architectural
-decisions you should know for every stakeholder what is really important to them,
-concrete and measurable.
-****
-
-=== Quality Tree
-
-[role="arc42help"]
-****
-.Content
-The quality tree (as defined in ATAM – Architecture Tradeoff Analysis Method) with quality/evaluation scenarios as leafs.
-
-.Motivation
-The tree structure with priorities provides an overview for a sometimes large number of quality requirements.
-
-.Form
-The quality tree is a high-level overview of the quality goals and requirements:
-
-* tree-like refinement of the term "quality". Use "quality" or "usefulness" as a root
-* a mind map with quality categories as main branches
-
-In any case the tree should include links to the scenarios of the following section.
-****
-
-=== Quality Scenarios
-
-[role="arc42help"]
-****
-.Contents
-Concretization of (sometimes vague or implicit) quality requirements using (quality) scenarios.
-
-These scenarios describe what should happen when a stimulus arrives at the system.
-
-For architects, two kinds of scenarios are important:
-
-* Usage scenarios (also called application scenarios or use case scenarios) describe the system’s runtime reaction to a certain stimulus. This also includes scenarios that describe the system’s efficiency or performance. Example: The system reacts to a user’s request within one second.
-* Change scenarios describe a modification of the system or of its immediate environment. Example: Additional functionality is implemented or requirements for a quality attribute change.
-
-.Motivation
-Scenarios make quality requirements concrete and allow to
-more easily measure or decide whether they are fulfilled.
-
-Especially when you want to assess your architecture using methods like
-ATAM you need to describe your quality goals (from section 1.2)
-more precisely down to a level of scenarios that can be discussed and evaluated.
-
-.Form
-Tabular or free form text.
-****
+[cols="1,1,4,1"]
+.Atributos de Calidad
+|==============
+| Ref | AQ | Scenario | Priority
+| 1 | Eficiencia | El tiempo de respuesta al usuario han de ser los mínimos posibles | Alta, Alta
+| 2 | Usabilidad | Ha de ser intuitiva y fácil de usar para personas no técnicas | Medio, Alta
+| 3 | Privacidad | El sistema ha de respetar la privacidad de los usuarios almacenando sus datos en PODs | Alta, Alta
+| 4 | Seguridad | Deberá haber un grado de seguridad para que los usuarios no entren en una cuenta que no les pertenezca | Media, Alta
+| 5 | Accesibilidad | La aplicación deberá se accesible siguiendo las recomendaciones WCAG 2.0 (Level AAA) | Baja, Media
+|==============
