--- a/docs/01_introduction_and_goals.adoc
+++ b/docs/01_introduction_and_goals.adoc
@@ -1,7 +1,7 @@
 [[section-introduction-and-goals]]
-== Introducción y Metas
+== 1. Introducción y Metas
 
-=== Vista de Requerimientos
+=== 1.1 Vista de Requerimientos
 
 [role="arc42help"]
 ****
@@ -25,7 +25,7 @@ Los requisitos son, a grandes rasgos, los siguientes:
 
 ****
 
-=== Metas de Calidad
+=== 1.2 Metas de Calidad
 
 [role="arc42help"]
 ****
@@ -50,7 +50,7 @@ Contenido, Motivación
 
 ****
 
-=== Partes interesadas (Stakeholders)
+=== 1.3 Partes interesadas (Stakeholders)
 
 [role="arc42help"]
 ****
