--- a/docs/12_glossary.adoc
+++ b/docs/12_glossary.adoc
@@ -43,7 +43,7 @@
 |Toda la aplicación deberá ser probada mediante pruebas en todas las capas que contenga la misma.
 
 |MongoBD
-|Base de Datos NoSQL orientado a documentos y de código abierto y cuya integración a aplicaciones que usen JavaScript es mucho más rápida y sencilla.
+|Base de Datos NoSQL orientada a documentos y de código abierto y cuya integración a aplicaciones que usan JavaScript es mucho más rápida y sencilla.
 
 |Seguridad
 |En el contexto de la aplicación, el sistema debe ser seguro siempre con los datos de los clientes con una serie de medidas para velar por la integridad de los mismos.
@@ -52,7 +52,7 @@
 |Unidad de trabajo utilizada para específicar una mejora en un sistema informático. En nuestro caso se usará para contabilizar las tareas que se van realizando, las que ya se han realizado, y quién debe hacer cada tarea.
 
 |Usabilidad
-|La aplicación será utilizada por todo tipo de personas sin que a estas les lleve mucho esfuerzo comprender cómo funciona la aplicación.
+|La aplicación será utilizada por todo tipo de personas y a estas no les debe llevar mucho esfuerzo ni tiempo comprender cómo funciona la aplicación.
 
 |Eficiente
 |Las transacciones que se realicen en la aplicación deberán ser de un tiempo pequeño.
