--- a/docs/02_architecture_constraints.adoc
+++ b/docs/02_architecture_constraints.adoc
@@ -7,21 +7,10 @@ Contexto: Es una aplicación para vender pinchos y bebida de forma online (o lo 
 
 Alcance: El alcance del sistema es poder dotar a los clientes de una aplicación funcional para poder hacer sus pedidos y procesarlos correctamente. Es decir tener un sistema lo más parecido posible a una tienda de comida online.
 
-=== Contexto de Convenios
-
-[options="header",cols="1,1"]
-|===
-|Restricción|Explicación
-|Documentación|Los convenios de Arc42 son los elegidos para realizar la documentación.
-|Modelo Vista Controlador (MVC)|El convenio MVC será seguido de cara a tener una separación de capas clara.
-|Criterios interfaz de usuario|Se seguirán unos mínimos para que la aplicación pueda ser lo más accesible posible (por ejemplo el criterio de contraste en colores AAA).
-|SOLID|Seguiremos los convenios de SOLID para los datos de los usuarios.
-|TypeScript|En cuanto al nombrado de métodos, clases, variables, parámetros… Se seguirán los convenios de TypeScript.
-|Fácil de usar (UI)|Es una aplicación que debería poder usar todo el mundo. Debe ser sencilla de usar y parecida a otras aplicaciones similares (por ejemplo aplicaciones de comida a domicilio).
-|===
-
 
 === Contexto técnico
+
+Aquí se pueden encontrar las restricciones que se seguirán para desarrollar el proyecto en base a unos principios. Dentro de estas restricciones se encuentran las referidas al sistema, documentación...
 
 [options="header",cols="1,1"]
 |===
@@ -30,20 +19,18 @@ Alcance: El alcance del sistema es poder dotar a los clientes de una aplicación
 |React|Es una manera sencilla de crear una interfaz de usuario y proporciona un mantenimiento más sencillo, un código más estable y un mayor rendimiento.
 |GitHub|Todo el proyecto quedará unificado en GitHub, donde crearemos varias ramas para encapsular las diferentes funcionales que implementemos.
 |Arc42|Es una de las mejores documentaciones de cara a hacer una documentación técnica, como es nuestro caso.
-|Node.js|Con ello obtenemos una aplicación más escalable y nos permite ejecutar nuestro código.
 |TypeScript|Nos dota de un lenguaje más sólido y limpio frente a JavaScript, con lo que el código tendrá menos errores y podremos detectarlos primero.
 |Docker|Ejecutaremos nuestra aplicación en un host de Docker.
-|MongoDB|Será nuestra base de datos donde almacenaremos todos los datos que necesitamos. MongoDB proporciona una base de datos con una gran documentación, perfecta para su uso junto a TypeScript e integrarla dentro de la aplicación es más sencillo y rápido. Esta decisión no es un requisito como en el caso de los demás, si no que hemos tomado esta decisión nosotros.
 |===
 
+=== Contexto Organizativas
 
-=== Contexto Organizacional
+Restricciones referidas al modelo organizativo que seguirán los integrantes del grupo durante todo el proyecto.
 
 [options="header",cols="1,1"]
 |===
 |Restricción|Explicación
-|Rama Master y Develop|En la rama Master solo se harán commits de versiones funcionales probadas para evitar que el proyecto pueda ser modificado por una versión con fallos o sin terminar.
-|Ramas por procesos|Para dar más encapsulación al proyecto, se crearán ramas según los procesos o tareas que vayamos teniendo durante el proyecto.
-|Reuniones|Cada semana se realizará dos reuniones como mínimo donde se pondrá en común el trabajo realizado, que es lo que queda por hacer, que problemas tiene cada miembro… Todo esto quedará documentado en un acta.
+|Reuniones|Cada semana se realizará una reunión como mínimo donde se pondrá en común el trabajo realizado, que es lo que queda por hacer, que problemas tiene cada miembro… Todo esto quedará documentado en un acta el cual se subirá a GitHub.
 |Issues y Pull Requests|De cara a tener una buena organización, crearemos issues con las tareas que tenemos que hacer cada miembro del equipo. En cuanto a los Pull Requests, están diseñados para que un miembro (o varios) del equipo, puedan revisar el código de otro miembro del equipo antes de subirlos a una rama.
+|Fecha de entrega|Cada cierto tiempo tendremos que ir entregando una versión del proyecto, la cual debería ser funcional y cumplir con lo que hemos ido especificando en las issues.
 |===
