Actualizada vista de despliegue
Ahora usa PLANTUML en vez de una imagen sin mas

--- a/docs/07_deployment_view.adoc
+++ b/docs/07_deployment_view.adoc
@@ -2,7 +2,28 @@
 
 == Vista de Despliegue
 
-image:07_deployment_view.png["Vista Despliegue"]
+[plantuml,"Vista de Despliegue",png]
+----
+skinparam linetype ortho
+agent "User Browser" as UB
+package WebApp as WA {
+    collections ReactComponents
+}
+package RESTAPI as RA {
+    database MongoDB
+    component ExpressJS
+}
+package "SOLID Pods Host" as SH {
+    card "User Pod"
+}
+
+UB -d->> WA
+WA -u->> UB
+WA -d->> RA
+RA -u->> WA
+RA -d->> SH
+SH -u->> RA
+----
 
 [role="arc42help"]
 ****
