Añadidos prototipos y NavBar responsive

--- a/docs/08_concepts.adoc
+++ b/docs/08_concepts.adoc
@@ -1,6 +1,13 @@
 [[section-concepts]]
 == Cross-cutting Concepts
 
+=== Interfaz de usuario
+
+image:PrototipoInicio.png["Prototipo de la pantalla principal"]
+
+image:PrototipoProductos.png["Prototipo de la pantalla de vista de productos"]
+
+image:PrototipoPerfil.png["Prototipo de la pantalla del perfil"]
 
 [role="arc42help"]
 ****
