--- a/docs/06_runtime_view.adoc
+++ b/docs/06_runtime_view.adoc
@@ -4,16 +4,47 @@
 === Escenario 1. Registrarse como un nuevo usuario
 Para registrarse como nuevo usuario en la aplicación, tendrás que dar permiso al Pod con tus datos
 para permitir al servicio conocer tus nombre, apellidos y direccion. Esto nos servirá para poder
-calcular los gastos de envío propios de enviar un producto al domicilio del usuario
+calcular los gastos de envío propios de enviar un producto al domicilio del usuario.
 
 
 === Escenario 2. Comenzar un nuevo pedido
 Para comenzar un nuevo pedido, has de loggearte en la web, con los datos requeridos que previamente 
-has proporcionado mediante el Pod, y comenzar a añadir productos a tu pedido
+has proporcionado mediante el Pod, y comenzar a añadir productos a tu pedido.
 
 
 
 === Escenario 3. Realizar un pedido
 Se empezarán a añadir los productos deseados al pedido y una vez se hayan añadido todos 
 los productos necesarios, podrás finalizar el pedido y se enviará a la direccion proporcionada
-por el pod
+por el pod.
+
+=== Escenario 4. Vista de productos
+Una vez en la vista de tienda, se pueden realizar varias operaciones, como ver detalles, filtrar 
+productos, buscar por nombre y añadir al carrito.
+[plantuml,"vistaProductos",png]
+----
+actor Usuario
+participant Tienda
+participant Carrito
+Usuario -> Tienda: accede
+Usuario -> Tienda: aplica filtros
+Usuario -> Tienda: detalles producto
+Tienda -> Tienda: mostrar detalles
+Usuario -> Tienda: añadir carrito
+Tienda -> Carrito: añade producto
+----
+
+=== Escenario 5. Información sobre pods
+Desde la vista de registro se puede navegar hasta una pantalla que contiene información sobre
+los pods que se utilizan en la aplicación.
+[plantuml,"vistaPods",png]
+----
+actor Usuario
+participant Sing_Up
+participant Info_Pods
+Usuario -> Sing_Up: accede
+Usuario -> Sing_Up: info Pods
+Sing_Up -> Info_Pods: redirige
+Usuario -> Info_Pods: volver a sing up
+Info_Pods -> Sing_Up: redirige
+----
