--- a/docs/08_concepts.adoc
+++ b/docs/08_concepts.adoc
@@ -1,9 +1,20 @@
 [[section-concepts]]
 == Conceptos transversales
 
-=== Modelo de dominio
+=== Modelo de dominio de la aplicación
 
 image:domainModel.png["Example UML Diagram"]
+
+.Table
+[options="header", cols="1,2"]
+|===
+| Nombre | Descripción 
+| POD | Es el elemento encargado de almacenar toda la información del usuario, que con su permiso podremos utilizar para realizar el envío del pedido. Para ello tendrá que darnos su consentimiento mediante el log in de SOLID.
+| Cliente | Realizará el pedido y nos facilitará sus datos personales (nombre, DNI, dirección) para poder realizar el envío.
+| Pedido | Contendrá todos los productos que el cliente haya elegido, y serán enviados a la dirección correspondiente.
+| Producto | Puede ser un pincho (bocata), una bebida o todo lo que este a disposición del cliente para ser añadido al pedido.
+|===
+
 
 === Interfaz de usuario
 
@@ -16,11 +27,11 @@ image:PrototipoPerfil.png["Prototipo de la pantalla del perfil"]
 
 === Seguridad
 
-Es parte fundamental de la aplicación el intercambio de datos y el procesamiento de estos de forma segura. Parte de esta seguridad viene dada por el uso de SOLID, que almacena los datos asgurando su seguridad.
+Es parte fundamental de la aplicación el intercambio de datos y el procesamiento de estos de forma segura. Parte de esta seguridad viene dada por el uso de SOLID, que almacena los datos asegurando su seguridad.
 
 === Pruebas funcionales
 
-La apliación deberá ser probada mediante el uso de tests creados para comporobar el funcionamiento, ayudándonos a determinar la correcta implementación de la esta.
+La aplicación deberá ser probada mediante el uso de tests creados para comporobar el funcionamiento, ayudándonos a determinar la correcta implementación de esta.
 
 === Privacidad
 
