Añadido modelo de dominio y corregido otros puntos de la documentación

--- a/docs/08_concepts.adoc
+++ b/docs/08_concepts.adoc
@@ -3,7 +3,8 @@
 
 === Modelo de dominio de la aplicación
 
-image:domainModel.png["Example UML Diagram"]
+image:ModeloDominio.png["Modelo de dominio"]
+
 
 .Table
 [options="header", cols="1,2"]
