--- a/docs/09_design_decisions.adoc
+++ b/docs/09_design_decisions.adoc
@@ -7,5 +7,5 @@
 | Uso de MERN Stack | Muy alta dado que esta decisión marca las tecnologías y la forma en la que vamos a utilizarlas | A pesar de que toda la aplicación dependa de esto, el uso de MERN nos proporciona una buena versatilidad a la hora de programar y una estructura de diseño completa | Hemos decidido usarla debido a que nos proporciona una base sólido para la realización del proyecto y se ajusta a las necesidades del proyecto.
 | MongoDB | Todos lo relativo a los datos y a su gestión depende de esta decisión | Un mal uso de la base de datos temprano puede traer consigo cambios muy grandes en el futuro | Es más fácil de utilizar junto al resto de tecnologías seleccionadas que el resto de las bases de datos
 | Temática de la tienda | La aplicación ha de girar en torno a esta temática | Si hubiera que cambiar la temática, habría que tocar diseños, clases, base de datos… | Nos pareció una temática adecuada.
-| Uso de SOLID | Los datos del usuario serán tratados a través de pods, donde se guardará información del usuario, manteniendo así su privacidad. | Si quisiéramos quitar SOLID, tendríamos que rehacer todo lo relacionado con la obtención de los datos del usuario | Es una buena forma de preservar la privacidad del usuario y sus datos.
+| Uso de Azure | El despliegue de la aplicación es efectuado en una máquina virtual hosteada en un servidor Azure | No sería complicado desplegarlo en otro servidor, como por ejemplo AWS | Azure es un entorno ideal para lo que necesitamos y cuenta con un crédito inicial gratuito para estudiantes.
 |===
