--- a/docs/03_system_scope_and_context.adoc
+++ b/docs/03_system_scope_and_context.adoc
@@ -12,6 +12,7 @@ El sistema permitirá al usuario hacer pedidos de los diferentes productos dispo
 * Base de datos: encargada de toda la persistencia de los datos que compondran la aplicación
 
 === Contexto Técnico
+image:ContextoTecnico.png["Contexto Técnico"]
 
 Como se ha mencionado anteriormente, la aplicación hará uso de la tecnología SOLID dirigida por Tim Berners-Lee para realizar un proyecto descentralizado. Esta proporcionará un pod a cada usuario permitiendo almacenar toda la información de cada uno, y se la proveerá a la aplicación.
 Para la implementación del proyecto se utilizarán tecnologías como REACT, para el desarrollo Frontend, y la base de datos MongoDB, para todo lo relativo a la persistencia de datos.
@@ -22,4 +23,5 @@ Para la implementación del proyecto se utilizarán tecnologías como REACT, par
 | TypeScript | Lenguaje de programación libre y de código abierto desarrollado y mantenido por Microsoft. Es un superconjunto de JavaScript
 | SOLID | Proyecto descentralizado cuyo principal objetivo es que el usuario tenga el control de su privacidad.
 | MongoDB | Base de datos NoSQL open source que ofrece un modelo de datos flexible para organizar y almacenar todo tipo de datos
+| Moongoose | Librería para Node.js que permite crear esquemas con configuraciones de forma sencilla. Además automatiza bastantes tareas de MongoDB.
 |===
