--- a/docs/09_design_decisions.adoc
+++ b/docs/09_design_decisions.adoc
@@ -9,7 +9,7 @@
 | Temática de la tienda | La aplicación ha de girar en torno a esta temática | Si hubiera que cambiar la temática, habría que tocar diseños, clases, base de datos… | Nos pareció una temática adecuada.
 | Uso de Azure | El despliegue de la aplicación es efectuado en una máquina virtual hosteada en un servidor Azure | No sería complicado desplegarlo en otro servidor, como por ejemplo AWS | Azure es un entorno ideal para lo que necesitamos y cuenta con un crédito inicial gratuito para estudiantes.
 | Uso de Mongoose | Solo afecta a unos pocos métodos que hacen llamadas a la base de datos | Si no la quisieramos utilizar solo habría que modificar los métodos que acceden a la base de datos | Facilita el uso y tratamiento de los datos de MongoDB
-| Uso de MUI | Afecta a todo el Frontend |  | Facilita en gran medida la creación de interfaces en React.
-| Uso de AXIOS | | | Facilita las peticiones get y post
-| Uso de React Router Dom | | | 
+| Uso de MUI | Afecta a todo el Frontend | Habría que reacer todo el frontend si quisieramos dejar de usar MUI | Facilita en gran medida la creación de interfaces en React.
+| Uso de AXIOS | Solo afecta a tres métodos | Si quisiereamos usar otra librería no daría mucho trabajo | Facilita las peticiones post
+| Uso de React Router Dom | Afecta la barra de navegación y a casi todos los test | Si quisieramos dejar de utilizarla, habría que buscar otra librería de enrutamiento y cambiar muchas clases | Facilita el enrutamiento para dibujar págioas y navegar entre ellas
 |===
